# Compiler

./: CMakeLists.txt  Error.cpp  Error.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  main.cpp
include/: Error.h  Evaluate.h  Node.h  Parser.h  Scanner.h  Symbols.h  Token.h
source/: Error.cpp  Evaluate.cpp  Node.cpp  Parser.cpp  Scanner.cpp  SymbolTable.cpp  Symbols.cpp  Token.cpp
tests/parser_declaration_tests/: delete_test.sh  insert_test.sh  run_test.sh  test000.out  test001.in  test002.in  test003.in  test004.in  test005.in  test005.out  test006.in  test006.out  test007.in  test007.out  test008.in  test008.out  test009.in  test009.out  test010.in  test010.out  test011.in  test011.out  test012.in  test012.out  test013.in  test013.out  test014.in  test015.in  test016.in  test017.in  test018.in  test018.out  test019.in  test019.out  test020.in  test020.out  test021.in  test022.in  test022.out  test023.in  (+215 more)
tests/parser_expression_tests/: insert_test.sh  test002.out  test003.out  test004.out  test005.out  test006.out  test007.out  test008.in  test008.out  test009.out  test010.out  test011.out  test012.out  test013.in  test013.out  test014.in  test014.out  test015.out  test016.out  test017.in  test017.out  test018.out  test019.out  test020.out  test021.out  test022.in  test022.out  test023.in  test023.out  test024.in  test024.out  test025.out  test026.out  test027.out  test028.out  test029.out  test030.out  test031.out  test032.in  test032.out  (+17 more)
tests/parser_statement_tests/: insert_test.sh  run_test.sh  test000.out  test001.out  test002.out  (+133 more)
(+104 files in other folders)
